# oai-agents-playground

./: .env-example  README.md  minimal_example.py  pyproject.toml
examples/ocr/: README.md  ocr_agent.py
examples/ocr/data/: page_0004.md  page_0005.md
examples/utils/: logfire_utils.py  message_utils.py
